# SoundSeek

./: .gitignore  README.md
AudioSearchCLI/: main.cpp
AudioSearchCLI/AudioSearchCLI.xcodeproj/: project.pbxproj
AudioSearchQT/: AudioSearchQT.pro  AudioSearchQT.pro.user.01023a1  AudioSearchQT.pro.user.4c2bf92  audioreader.h  audiorecorder.cpp  audiorecorder.h  audiorecorder.ui  audiothumbnail.cpp  audiothumbnail.h  audiothumbnail.ui  common-utils.cpp  copy_frameworks.sh  edge.cpp  edge.h  graphwidget.cpp  graphwidget.h  images.qrc  main.cpp  node.cpp  node.h  starpolygon.h  utils.h  waveform.cpp  waveform.h
DistanceCalculator/: ezETAProgressBar.hpp  main.cpp
DistanceCalculator/DistanceCalculator/: main.cpp
DistanceCalculator/DistanceCalculator.xcodeproj/: project.pbxproj
FeatureExtractor/: CMakeLists.txt  main.cpp
docs/: Doxyfile
docs/html/: _audio_features_8h.html  _audio_features_8h_source.html  _audio_object_8h.html  _audio_object_8h_source.html  _audio_search_engine_8cpp.html  _audio_search_engine_8h.html  _audio_search_engine_8h_source.html  _common_8h.html  _common_8h_source.html  _config_8h.html  _config_8h_source.html  _distance_8cpp.html  _distance_8h.html  _distance_8h_source.html  _feature_extractor_8cpp.html  _feature_extractor_8h.html  _feature_extractor_8h_source.html  (+78 more)
src/: AudioFeatures.h  AudioObject.h  AudioSearchEngine.cpp  AudioSearchEngine.h  AudioSearchEngine2.cpp  AudioSearchEngine2.h  Common.h  Config.h  DeepSimilarity.h  Distance.cpp  Distance.h  FeatureExtractor.cpp  FeatureExtractor.h  FileUtils.h  tests.cpp  tests.h
(+106 files in other folders)
